Corrections to some site navigation behaviour: * incorrect padding when hovering over menu items on small devices * mobile menu not scrollable when it is too long for the current viewport * mobile menu icon not changing to a “close” variant when it is open
Rename svgsprites npm task.

--- a/src/scss/components/site-header/_site-header.scss
+++ b/src/scss/components/site-header/_site-header.scss
@@ -60,10 +60,6 @@ $site-header-border-color--reversed: $color__brand--secondary !default;
     &__search {
         display: none;
     }
-
-    > .#{$pl-prefix}wrapper {
-        position: relative;
-    }
 }
 
 /* variant with the top colour bar set to a gradient of site brand colours */
